Creation and styling of occupation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="name-container">
         <h1 class="name" id="name">Thomas Platts</h1>
       </div>
+      <div class="job-title-container">
+        <p class="job-title" id="job-title">Occupation: Front-End Developer</p>
+      </div>
     </div>
   </main>
   
