Completion of all main elements of card

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       <div class="job-title-container">
         <p class="job-title" id="job-title">Occupation: Front-End Developer</p>
       </div>
+      <div class="website-container">
+        <p class="website" id="website">Website: <a class="website-link" target="_blank" href="https://www.google.com">https://www.google.com</a></p>
+      </div>
+      <div class="email-container">
+        <p class="email" id="email">Email: <a href="mailto:tomplattsbse@hotmail.com" class="email-link">tomplattsbse@hotmail.com</a></p>
+      </div>
+      <div class="tel-container">
+        <p class="tel" id="tel">Telephone: +44 12345 678901</p>
+      </div>
     </div>
   </main>
   
