Addition and placement of logos

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <div class="tel-container">
         <p class="tel" id="tel">Telephone: +44 12345 678901</p>
       </div>
+      <div class="image-container">
+        <img src="Logos/instagram-logo.png" alt="Instagram Logo" class="instagram">
+        <img src="Logos/github-logo.png" alt="GitHub Logo" class="github">
+        <img src="Logos/codewars-logo.png" alt="CodeWars Logo" class="code-wars">
+        <img src="Logos/leetcode-logo.png" alt="LeetCode Logo" class="leetcode">
+      </div>
     </div>
   </main>
   
