Completion of base face business card

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         <p class="tel" id="tel">Telephone: +44 12345 678901</p>
       </div>
       <div class="image-container">
-        <img src="Logos/instagram-logo.png" alt="Instagram Logo" class="instagram">
-        <img src="Logos/github-logo.png" alt="GitHub Logo" class="github">
-        <img src="Logos/codewars-logo.png" alt="CodeWars Logo" class="code-wars">
-        <img src="Logos/leetcode-logo.png" alt="LeetCode Logo" class="leetcode">
+        <a title="Instagram Profile" class="ig-link" target="_blank" href="https://www.instagram.com/tomplatts4/"><img src="Logos/instagram-logo.png" alt="Instagram Logo" class="instagram"></a>
+        <a title="GitHub Profile" class="gh-link" target="_blank" href="https://github.com/TPlatts04"><img src="Logos/github-logo.png" alt="GitHub Logo" class="github"></a>
+        <a title="CodeWars Profile" class="cw-link" target="_blank" href="https://www.codewars.com/users/TPlatts04"><img src="Logos/codewars-logo.png" alt="CodeWars Logo" class="code-wars"></a>
+        <a title="LeetCode Profile" class="lc-link" target="_blank" href="https://leetcode.com/TPlatts2004/"><img src="Logos/leetcode-logo.png" alt="LeetCode Logo" class="leetcode"></a>
+      </div>
+      <div class="corner-piece">
+        <img src="Logos/corner-click.jpg" alt="Click Me" class="corner">
       </div>
     </div>
   </main>
