Complete Business Card

--- a/index.html
+++ b/index.html
@@ -12,30 +12,40 @@
 <body>
 
   <main class="container">
-    <div class="business-card">
-      <div class="name-container">
-        <h1 class="name" id="name">Thomas Platts</h1>
+    <div class="card-whole">
+      <div class="business-card">
+        <div class="name-container">
+          <h1 class="name" id="name">Thomas Platts</h1>
+        </div>
+        <div class="job-title-container">
+          <p class="job-title" id="job-title">Occupation: Front-End Developer</p>
+        </div>
+        <div class="website-container">
+          <p class="website" id="website">Website: <a class="website-link" target="_blank" href="https://www.google.com">https://www.google.com</a></p>
+        </div>
+        <div class="email-container">
+          <p class="email" id="email">Email: <a href="mailto:tomplattsbse@hotmail.com" class="email-link">tomplattsbse@hotmail.com</a></p>
+        </div>
+        <div class="tel-container">
+          <p class="tel" id="tel">Telephone: +44 12345 678901</p>
+        </div>
+        <div class="image-container">
+          <a title="Instagram Profile" class="ig-link" target="_blank" href="https://www.instagram.com/tomplatts4/"><img src="Logos/instagram-logo.png" alt="Instagram Logo" class="instagram"></a>
+          <a title="GitHub Profile" class="gh-link" target="_blank" href="https://github.com/TPlatts04"><img src="Logos/github-logo.png" alt="GitHub Logo" class="github"></a>
+          <a title="CodeWars Profile" class="cw-link" target="_blank" href="https://www.codewars.com/users/TPlatts04"><img src="Logos/codewars-logo.png" alt="CodeWars Logo" class="code-wars"></a>
+          <a title="LeetCode Profile" class="lc-link" target="_blank" href="https://leetcode.com/TPlatts2004/"><img src="Logos/leetcode-logo.png" alt="LeetCode Logo" class="leetcode"></a>
+        </div>
       </div>
-      <div class="job-title-container">
-        <p class="job-title" id="job-title">Occupation: Front-End Developer</p>
-      </div>
-      <div class="website-container">
-        <p class="website" id="website">Website: <a class="website-link" target="_blank" href="https://www.google.com">https://www.google.com</a></p>
-      </div>
-      <div class="email-container">
-        <p class="email" id="email">Email: <a href="mailto:tomplattsbse@hotmail.com" class="email-link">tomplattsbse@hotmail.com</a></p>
-      </div>
-      <div class="tel-container">
-        <p class="tel" id="tel">Telephone: +44 12345 678901</p>
-      </div>
-      <div class="image-container">
-        <a title="Instagram Profile" class="ig-link" target="_blank" href="https://www.instagram.com/tomplatts4/"><img src="Logos/instagram-logo.png" alt="Instagram Logo" class="instagram"></a>
-        <a title="GitHub Profile" class="gh-link" target="_blank" href="https://github.com/TPlatts04"><img src="Logos/github-logo.png" alt="GitHub Logo" class="github"></a>
-        <a title="CodeWars Profile" class="cw-link" target="_blank" href="https://www.codewars.com/users/TPlatts04"><img src="Logos/codewars-logo.png" alt="CodeWars Logo" class="code-wars"></a>
-        <a title="LeetCode Profile" class="lc-link" target="_blank" href="https://leetcode.com/TPlatts2004/"><img src="Logos/leetcode-logo.png" alt="LeetCode Logo" class="leetcode"></a>
-      </div>
-      <div class="corner-piece">
-        <img src="Logos/corner-click.jpg" alt="Click Me" class="corner">
+      <div class="business-card-back">
+        <p class="occupation-title-back">Front-End Developer</p>
+        <div class="back-images">
+          <img src="Logos/HTML5.png" alt="HTML5 Image" class="html5">
+          <img src="Logos/CSS3.png" alt="CSS3 Logo" class="css3">
+          <img src="Logos/JS.png" alt="JS Logo" class="js">
+        </div>
+        <div class="signature">
+          <p class="sign">--- T.PLATTS ---</p>
+        </div>
       </div>
     </div>
   </main>
